--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <h1 class="text-danger">HELLOWORLD</h1>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav  id="navegador" class="navbar navbar-expand-lg bg-body-tertiary" id="navegador"> 
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#">Navbar</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
