--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,12 +1,40 @@
-<p>home works!</p>
-<h1 id="tittle">PRINCIPAL PAGE -- PRODUCTS</h1>
 
-<div class="card" style="width: 18rem;">
-	<img src="..." class="card-img-top" alt="...">
-	<div class="card-body">
-		<h5 class="card-title">Card title</h5>
-		<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
-			content.</p>
-		<a href="#" class="btn btn-danger">hunger</a>
+<h1 id="tittle"> LICORES</h1>
+<div class="cuerpo">
+	<div class="card" style="width: 18rem;">
+		<img src="../../../assets/OIP (1).jpg" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">VINOS</h5>
+			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
+				content.</p>
+			<a href="#" class="btn ">hunger</a>
+		</div>
+	</div>
+	<div class="card" style="width: 18rem;">
+		<img src="../../../assets/vidka.jpg" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">VODKA</h5>
+			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
+				content.</p>
+			<a href="#" class="btn ">hunger</a>
+		</div>
+	</div>
+	<div class="card" style="width: 18rem;">
+		<img src="../../../assets/malibu.jpg" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">MALIBU</h5>
+			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
+				content.</p>
+			<a href="#" class="btn ">hunger</a>
+		</div>
+	</div>
+	<div class="card" style="width: 18rem;">
+		<img src="../../../assets/aperol.jpg" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">APEROL</h5>
+			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
+				content.</p>
+			<a href="#" class="btn ">hunger</a>
+		</div>
 	</div>
 </div>
