--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 
 <nav  id="navegador" class="navbar navbar-expand-lg" id="navegador"> 
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">Navbar</a>
+		<a class="navbar-brand" href="#">LICOURICE</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
