--- a/src/app/page/products/products.html
+++ b/src/app/page/products/products.html
@@ -1,1 +1,26 @@
-<p>products works!</p>
+<div class="container">
+	<div class="row">
+		<div class="col-6">
+			<div class="card" >
+		<img src="../../../assets/birrrreaaaaaaaaa.jpg" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">CERVEZA</h5>
+			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
+				content.</p>
+			<a href="#" class="btn ">hunger</a>
+		</div>
+	</div>
+		</div>
+		<div class="col-6">
+			<div class="card" >
+		<img src="../../../assets/campari.jpg" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">CAMPARI</h5>
+			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
+				content.</p>
+			<a href="#" class="btn ">hunger</a>
+		</div>
+	</div>
+		</div>
+	</div>
+</div>
