--- a/src/app/page/products/products.css
+++ b/src/app/page/products/products.css
@@ -10,16 +10,19 @@ img{
 }
 @media (min-width: 751px) {
 .card{
-	width: 16rem;
+	width: 100%;
+	height: 100%;
 }
 }
 /*telefono*/
 @media (max-width: 750px) {
 	.card{
-		width: 9rem;
+	width: 100%;
+	
 	}
 }
 .btn {
 background-color: rgb(0, 17, 255);
 color: aliceblue;
-}
+} 
+
