termine unos ultimos detalles ademas de agregar cosas en about, proxima clase agregar botones al contact

--- a/src/app/page/about/about.html
+++ b/src/app/page/about/about.html
@@ -1,1 +1,18 @@
-<p>about works!</p>
+<div class="container">
+			
+	<div class="imagen">
+		<img src="../../../assets/logolicoreria.jpg" alt="logo">
+	</div>
+	<div class="titulo">
+		<h1>¡SOBRE NOSOTROS!</h1>
+	</div>
+	<div class="texto">
+
+		<H3>SOMOS UNA DE LOS DISTRIBUIDORES DE BEBIDAS MAS CONOCIDOS EN TODO EL PAIS, NUESTROS PRINCIPALES CLIENTES SON: LA BRESH, MUSEUM, MOOD, EL CATALOGO DE VINOS DE ARAMBURU, ENTRE OTROS ADEMAS DE SER LOS SPONSORS DE LA SELECCION ARGENTINA.
+		</H3>
+		
+	</div>
+	<div class="texto2 ">
+		<H3>CONTAMOS CON UN AMPLIO CATALOGO DE DISTINTOS TIPOS DE LICORES DESDE BEBIDAS FUERTES A BEDIDAS SUAVES.</H3>
+	</div>
+</div>
