--- a/src/app/page/products/products.css
+++ b/src/app/page/products/products.css
@@ -25,4 +25,9 @@ img{
 background-color: rgb(0, 17, 255);
 color: aliceblue;
 } 
+H1{
+	display: flex;
+	justify-content: center;
+	font-size: 100px;
+}
 
