--- a/src/app/page/products/products.html
+++ b/src/app/page/products/products.html
@@ -1,3 +1,4 @@
+<H1>PRODUCTOS</H1>
 <div class="container">
 	<div class="row">
 		<div *ngFor="let i of infoTarjeta" class="col-lg-3 col-md-6 col-sm-12 col-xs-12 mb-4">
