--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,4 @@
-
-<nav  id="navegador" class="navbar navbar-expand-lg" id="navegador"> 
+<nav id="navegador" class="navbar navbar-expand-lg" id="navegador">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#">LICOURICE</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -14,17 +13,35 @@
 				<li class="nav-item">
 					<a class="nav-link" href="about">About</a>
 				</li>
-			<li class="nav-item">
-				<a class="nav-link" href="contact">contact</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="products">products</a>
-			</li>
+				<li class="nav-item">
+					<a class="nav-link" href="contact">contact</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+						aria-expanded="false">
+					products
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="dropdown-item" href="products">All</a></li>
+						<li><hr class="dropdown-divider"></li>
+						<li><a class="dropdown-item" href="ofertas">clasicos</a></li>
+						<li><a class="dropdown-item" href="ofertas">whenever</a></li>
+						<li><a class="dropdown-item" href="#">Something else here</a></li>
+					</ul>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="ofertas">ofertas</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="products">products</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="products">products</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="products">products</a>
+				</li>
 			</ul>
-			<form class="d-flex" role="search">
-				<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-				<button class="btn btn-outline-success" type="submit">Search</button>
-			</form>
 		</div>
 	</div>
 </nav>
