intento de seguir con las secciones (pocos avances no eniendo nada

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,22 +24,13 @@
 					<ul class="dropdown-menu">
 						<li><a class="dropdown-item" href="products">All</a></li>
 						<li><hr class="dropdown-divider"></li>
-						<li><a class="dropdown-item" href="ofertas">clasicos</a></li>
-						<li><a class="dropdown-item" href="ofertas">whenever</a></li>
-						<li><a class="dropdown-item" href="#">Something else here</a></li>
+						<li><a class="dropdown-item" href="clasicos">clasicos</a></li>
+						<li><a class="dropdown-item" href="fiesta">fiesta</a></li>
+						<li><a class="dropdown-item" href="bar">bar</a></li>
 					</ul>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="ofertas">ofertas</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="products">products</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="products">products</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="products">products</a>
 				</li>
 			</ul>
 		</div>
