--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,29 +8,29 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="home">Home</a>
+					<a class="nav-link active" aria-current="page" href="home">INICIO</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="about">About</a>
+					<a class="nav-link" href="about">SOBRE NOSOTROS</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="contact">contact</a>
+					<a class="nav-link" href="contact">CONTACTO</a>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
 						aria-expanded="false">
-					products
+					PRODUCTOS
 					</a>
 					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="products">All</a></li>
+						<li><a class="dropdown-item" href="products">TODO</a></li>
 						<li><hr class="dropdown-divider"></li>
-						<li><a class="dropdown-item" href="clasicos">clasicos</a></li>
-						<li><a class="dropdown-item" href="fiesta">fiesta</a></li>
-						<li><a class="dropdown-item" href="bar">bar</a></li>
+						<li><a class="dropdown-item" href="clasicos">CLASICOS</a></li>
+						<li><a class="dropdown-item" href="fiesta">FIESTA</a></li>
+						<li><a class="dropdown-item" href="bar">BAR</a></li>
 					</ul>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="ofertas">ofertas</a>
+					<a class="nav-link" href="ofertas">OFERTAS</a>
 				</li>
 			</ul>
 		</div>
