--- a/src/app/page/products/secciones/seccion2/seccion2.html
+++ b/src/app/page/products/secciones/seccion2/seccion2.html
@@ -1,1 +1,40 @@
 <H1>FIESTA</H1>
+<div class="container">
+<!-- este container conforma lo que almacena las tarjetas el row representaria una fila de tarjetas :D -->
+	<div class="row">
+		<div *ngFor="let i of infolicor" class="col-lg-3 col-md-6 col-sm-12 col-xs-12 mb-4">
+			<div class="card">
+				<img src="{{i.img}}" class="card-img-top" alt="{{i.alt}}">
+				<div class="card-body">
+					<h5 class="card-title">{{i.titulo}}</h5>
+					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#hunger"
+						(click)="verMas(i)">
+						HUNGER
+					</button>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</div>
+
+<div class="modal fade" id="hunger" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h1 class="modal-title fs-5" id="exampleModalLabel">AGREGAR PRODUCTO</h1>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<img src="{{tarjetaseleccionada?.img}}" alt="{{tarjetaseleccionada?.alt}}">
+				<div class="prize">
+					<h3>${{tarjetaseleccionada?.precio}}</h3>
+				</div>
+			</div>
+			
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
