--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,5 +1,5 @@
 
-<h1 id="tittle"> LICORES</h1>
+<h1 id="tittle"> PRINCIPAL</h1>
 <div class="container">
 	<div class="row">
 		<div *ngFor="let i of infoLicor" class="col-lg-3 col-md-6 col-sm-12 col-xs-12 mb-4">
