--- a/src/app/page/contact/contact.html
+++ b/src/app/page/contact/contact.html
@@ -2,6 +2,23 @@
 
 <div class="container">
     <div class ="boton">
-        <img src="" alt="">
+        <img src="logolicoreria.jpg" alt="">
     </div>
 </div>
+
+<!-- inserto de etiqueta formGroup para crear un formulario y la igualo a su nombre
+ [formGroup] -> DIrectiva de formularios reactivos-->
+<form [formGroup]="nuevolicor" (ngSubmit)="crearLicor()">
+	<div class="mb3">
+		<label for="titulo" class="form-label">nombre</label>
+		<!-- forControlName -> atributo que vincule con la informacion de mi propiedad -->
+		<input id="titulo" type="text" class="form-control" formControlName="titulo">
+	</div>
+	<div class="mb3">
+		<label for="precio" class="form-label">precio</label>
+		<input id="precio" type="number" class="form-control" formControlName="precio">
+	</div>
+	<!-- el boton se  deshabilita  cuando el "nuevoproducto" no es valido
+	 ej faltan campos por rellenar o no cumplen el valor esperado -->
+	<button type="submit" class="btn-btn-primary w-100" [disabled]="!nuevolicor.valid">guardar</button>
+</form>
