--- a/src/app/page/ofertas/ofertas.html
+++ b/src/app/page/ofertas/ofertas.html
@@ -1,1 +1,69 @@
-<p>ofertas works!</p>
+<H1>OFERTAS</H1>
+
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../../../assets/OIP (1).jpg" class="d-block w-100" alt="vino">
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/vidka.jpg" class="d-block w-100" alt="vodka">
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/fernet.jpg" class="d-block w-100" alt="fernet">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<H1>PRODUCTOS EN OFERTA</H1>
+<div class="container">
+<!-- este container conforma lo que almacena las tarjetas el row representaria una fila de tarjetas :D -->
+	<div class="row">
+		<div *ngFor="let i of infolicor" class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-4">
+			<div class="card">
+				<img src="{{i.img}}" class="card-img-top" alt="{{i.alt}}">
+				<div class="card-body">
+					<h5 class="card-title">{{i.titulo}}</h5>
+					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#hunger"
+						(click)="verMas(i)">
+						HUNGER
+					</button>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</div>
+
+
+
+<div class="modal fade" id="hunger" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h1 class="modal-title fs-5" id="exampleModalLabel">AGREGAR PRODUCTO</h1>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<img src="{{tarjetaseleccionada?.img}}" alt="{{tarjetaseleccionada?.alt}}" class="imagen">
+				<div class="prize">
+					<!-- INTERPOLACION = INSERTO ALGO EN DOBLE LLAVES DEL TS AL HTML 
+					el ? para que acepte las propiedades 
+					-->
+					<h3>{{tarjetaseleccionada?.precio}}</h3>
+				</div>
+			</div>
+			
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
