--- a/src/app/page/ofertas/ofertas.html
+++ b/src/app/page/ofertas/ofertas.html
@@ -1,26 +1,43 @@
 <H1>OFERTAS</H1>
-
-<div id="carouselExample" class="carousel slide">
+<div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../../../assets/OIP (1).jpg" class="d-block w-100" alt="vino">
+     <img src="../../../assets/OIP (1).jpg" class="d-block w-100 img-c" alt="vino">
+      <div class="carousel-caption d-none d-md-block">
+        <h4>VINO</h4>
+        <p>CATALOGO DE VINOS A PARTIR DE $10000</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/vidka.jpg" class="d-block w-100" alt="vodka">
+      <img src="../../../assets/vidka.jpg" class="d-block w-100 img-c" alt="vodka">
+      <div class="carousel-caption d-none d-md-block">
+        <h4>VODKA</h4>
+        <p>ABSOLUT VODKA C/U $17000</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/fernet.jpg" class="d-block w-100" alt="fernet">
+      <img src="../../../assets/fernet.jpg" class="d-block w-100 img-c" alt="fernet">
+      <div class="carousel-caption d-none d-md-block">
+        <h4>FERNET</h4>
+        <p>FERNET BRANCA C/U $9000</p>
+      </div>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
 
 <H1>PRODUCTOS EN OFERTA</H1>
 <div class="container">
@@ -57,7 +74,7 @@
 					<!-- INTERPOLACION = INSERTO ALGO EN DOBLE LLAVES DEL TS AL HTML 
 					el ? para que acepte las propiedades 
 					-->
-					<h3>{{tarjetaseleccionada?.precio}}</h3>
+					<h3>${{tarjetaseleccionada?.precio}}</h3>
 				</div>
 			</div>
 			
@@ -66,4 +83,27 @@
 			</div>
 		</div>
 	</div>
+</div>
+<h1>VISITE NUESTROS OTROS PRODUCTOS</h1>
+
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../../../assets/campari.jpg" class="d-block w-100 img-c" alt="campari">
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/malibu.jpg" class="d-block w-100 img-c" alt="malibu">
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/gancia.jpg" class="d-block w-100 img-c" alt="gancia">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
