--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -25,6 +25,7 @@
 			</div>
 			<div class="modal-body">
 				<img src="{{tarjetaseleccionada?.img}}" alt="{{tarjetaseleccionada?.alt}}">
+				<h3>${{tarjetaseleccionada?.precio}}</h3>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
