--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<nav id="navegador" class="navbar navbar-expand-lg" id="navegador">
+<nav id="navegador" class="navbar navbar-expand-lg">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#">LICOURICE</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
