--- a/src/app/page/ofertas/ofertas.html
+++ b/src/app/page/ofertas/ofertas.html
@@ -7,21 +7,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-     <img src="../../../assets/OIP (1).jpg" class="d-block w-100 img-c" alt="vino">
+     <img src="https://images.pexels.com/photos/774455/pexels-photo-774455.jpeg" class="d-block w-100 img-c" alt="vino">
       <div class="carousel-caption d-none d-md-block">
         <h4>VINO</h4>
         <p>CATALOGO DE VINOS A PARTIR DE $10000</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/vidka.jpg" class="d-block w-100 img-c" alt="vodka">
+      <img src="https://images.pexels.com/photos/11982319/pexels-photo-11982319.jpeg" class="d-block w-100 img-c" alt="vodka">
       <div class="carousel-caption d-none d-md-block">
         <h4>VODKA</h4>
         <p>ABSOLUT VODKA C/U $17000</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/fernet.jpg" class="d-block w-100 img-c" alt="fernet">
+      <img src="https://images.pexels.com/photos/34418075/pexels-photo-34418075.jpeg" class="d-block w-100 img-c" alt="fernet">
       <div class="carousel-caption d-none d-md-block">
         <h4>FERNET</h4>
         <p>FERNET BRANCA C/U $9000</p>
@@ -92,7 +92,7 @@
       <img src="../../../assets/campari.jpg" class="d-block w-100 img-c" alt="campari">
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/malibu.jpg" class="d-block w-100 img-c" alt="malibu">
+      <img src="https://images.pexels.com/photos/16845292/pexels-photo-16845292.jpeg" class="d-block w-100 img-c" alt="malibu">
     </div>
     <div class="carousel-item">
       <img src="../../../assets/gancia.jpg" class="d-block w-100 img-c" alt="gancia">
