--- a/src/app/page/about/about.html
+++ b/src/app/page/about/about.html
@@ -1,11 +1,11 @@
 <div class="container">
-			
-	<div class="imagen">
-		<img src="../../../assets/logolicoreria.jpg" alt="logo">
-	</div>
-	<div class="titulo">
+				<div class="titulo">
 		<h1>¡SOBRE NOSOTROS!</h1>
 	</div>
+	<div class="imagen">
+		<img src="../../../assets/logolicoreria.jpg" alt="logo" width="490rem">
+	</div>
+
 	<div class="texto">
 
 		<H3>SOMOS UNA DE LOS DISTRIBUIDORES DE BEBIDAS MAS CONOCIDOS EN TODO EL PAIS, NUESTROS PRINCIPALES CLIENTES SON: LA BRESH, MUSEUM, MOOD, EL CATALOGO DE VINOS DE ARAMBURU, ENTRE OTROS ADEMAS DE SER LOS SPONSORS DE LA SELECCION ARGENTINA.
