--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,7 +14,7 @@
 					<a class="nav-link" href="about">SOBRE NOSOTROS</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="contact">CONTACTO</a>
+					<a class="nav-link" href="contact">FORMULARIO</a>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
