--- a/src/app/page/ofertas/ofertas.html
+++ b/src/app/page/ofertas/ofertas.html
@@ -107,3 +107,25 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<div id="carouselExample" class="carousel slide" >
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://images.pexels.com/photos/16845295/pexels-photo-16845295.jpeg" class="d-block w-100 img-c" alt="campari">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.pexels.com/photos/16845292/pexels-photo-16845292.jpeg" class="d-block w-100 img-c" alt="malibu">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.pexels.com/photos/32327848/pexels-photo-32327848.jpeg" class="d-block w-100 img-c" alt="gancia">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
