--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,5 +1,26 @@
 
 <h1 id="tittle"> PRINCIPAL</h1>
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../../../assets/campari.jpg" class="d-block w-100 img-c" alt="campari">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.pexels.com/photos/16845292/pexels-photo-16845292.jpeg" class="d-block w-100 img-c" alt="malibu">
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/gancia.jpg" class="d-block w-100 img-c" alt="gancia">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 <div class="container">
 	<div class="row">
 		<div *ngFor="let i of infoLicor" class="col-lg-3 col-md-6 col-sm-12 col-xs-12 mb-4">
