por fin la re concha de tu madre

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -39,3 +39,9 @@
 <!--etiqueta que muestra el contenido de cada aplicacionnm-->
 <router-outlet />
 <!-- <About></About> -->
+
+<footer class="footer">
+  <div class="footer-content">
+    <p>&copy; 2025 Licorería LICOURICE. Todos los derechos reservados.</p>
+  </div>
+</footer>
