--- a/src/app/app.css
+++ b/src/app/app.css
@@ -6,3 +6,18 @@ background-color: rgb(0, 17, 255);
 .nav-link, .nav-link.active, .navbar-brand{
     color:whitesmoke ;
 }
+
+.footer {
+  background-color: rgb(0, 17, 255); 
+  color: whitesmoke;       
+  padding: 20px 0;
+  text-align: center;
+}
+
+.footer .footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+
