--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -23,6 +23,7 @@
 </div>
 <div class="container">
 	<div class="row">
+		<!-- NG FOR RECORRE UNA COLECCIONDE ELEMNTOS Y GENERA UN BLOQUE EN EL DOM -->
 		<div *ngFor="let i of infoLicor" class="col-lg-3 col-md-6 col-sm-12 col-xs-12 mb-4">
 			<div class="card">
 				<img src="{{i.img}}" class="card-img-top" alt="{{i.alt}}">
